# MixCompare

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  VERSION  build_linux.sh  build_macos.zsh  build_windows.ps1  installer.iss  update_version.ps1  update_version.sh
cmake/: ApplyClapPatch.cmake  ApplyJucePatch.cmake  Version.cmake
docs-bugreport/: MixCompare-diagnostic.log.txt
patches/: clap-juce-extensions-windows-dpi.patch  juce-webview-linux-childlog.patch  juce-webview-linux-ldpath.patch  juce-webview-linux-soname.patch  juce-webview-linux-utf8.patch
plugin/: CMakeLists.txt  MixCompare.cpp  MixCompare.h  ParameterIDs.h  config.h
plugin/audio/: AudioDecoder.cpp  AudioDecoder.h  AudioToolboxDecoder.h  AudioToolboxDecoder.mm  FileDialog.h  FileDialog_mac.mm  FileDialog_win.cpp  IPlaybackSource.h  InMemorySource.h  MediaFoundationDecoder.cpp  MediaFoundationDecoder.h  MonkeyAudioDecoder.cpp  MonkeyAudioDecoder.h  StreamingDecoder.cpp  StreamingDecoder.h  StreamingSource.cpp  StreamingSource.h
plugin/core/: AudioEngine.cpp  AudioEngine.h
plugin/dsp/: metering.h  svt_filter.h
plugin/lib/mac_sdk/: CMakeLists.txt
plugin/lib/mac_sdk/MACLib/: APECompress.cpp  APECompress.h  APECompressCreate.h  APEDecompress.cpp  APEDecompress.h  APEDecompressCore.cpp  APEDecompressCore.h  APEHeader.cpp  APEInfo.cpp  APEInfo.h  APELink.cpp  APETag.cpp  APETag.h  MACLib.cpp  MACLib.h  MD5.cpp  MD5.h  NNFilterAVX512.cpp  NNFilterAltiVec.cpp  NewPredictor.cpp  NewPredictor.h  UnBitArrayBase.cpp  WAVInputSource.cpp  WAVInputSource.h
plugin/lib/mac_sdk/MACLib/Old/: APEDecompressCoreOld.cpp  APEDecompressOld.cpp  APEDecompressOld.h  AntiPredictorExtraHighOld.cpp  NewPredictorOld.cpp  NewPredictorOld.h  UnBitArrayOld.cpp  UnMACOld.cpp
plugin/lib/mac_sdk/Shared/: APETicks.h  All.h  BufferIO.cpp  BufferIO.h  CRC.cpp  CharacterHelper.h  GDIBitmapPtr.h  GlobalFunctions.cpp  GlobalFunctions.h  IAPEIO.h  IAPETag.h  MFCGlobals.h  MFCWarnings.h  MemoryIO.cpp  MemoryIO.h  SmartPtr.h  StdLibFileIO.cpp  StdLibFileIO.h  Version.h  Warnings.h  WholeFileIO.cpp  WholeFileIO.h  WinFileIO.cpp  WinFileIO.h  WindowsEnvironment.h
plugin/resources/: main.rc  resource.h
plugin/src/: KeyEventForwarder.cpp  KeyEventForwarder.h  KeyEventForwarder_mac.mm  ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Version.h.in
plugin/src/audio/: FFmpegAACFormat.cpp  FFmpegAACFormat.h  IPlaybackSource.h  InMemoryPlaybackSource.cpp  InMemoryPlaybackSource.h  MediaFoundationAACFormat.cpp  MediaFoundationAACFormat.h  MomentaryProcessor.cpp  MomentaryProcessor.h  MonkeyAudioFormat.cpp  MonkeyAudioFormat.h  NullPlaybackSource.h  StreamingPlaybackSource.cpp  StreamingPlaybackSource.h
plugin/src/core/: AudioEngine.cpp  AudioEngine.h  ErrorManager.cpp  ErrorManager.h  FormatUtils.h  MeteringService.cpp  MeteringService.h  PlaylistManager.cpp  PlaylistManager.h  StateManager.cpp  StateManager.h  SystemInfo.h  TransportManager.cpp  TransportManager.h  ValueTreeHelpers.cpp  ValueTreeHelpers.h
plugin/src/util/: CrashHandler.cpp  CrashHandler.h  DiagnosticLog.cpp  DiagnosticLog.h
tools/: linux-webview-diag.sh
wasm/: CMakeLists.txt  build.sh
wasm/src/: dsp_engine.h  metering.h  momentary_processor.h  smoothed_value.h  svt_filter.h  wasm_exports.cpp
webui/: .gitignore  eslint.config.js  index.html  index.web.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vite.config.web.ts
webui/public/: debug.html
webui/public-web/worklet/: dsp-processor.js
webui/src/: App.css  App.tsx  version.ts  vite-env.d.ts
webui/src/assets/: licenses.json  web_demos.json
webui/src/bridge/iplug/: iplug-shim.ts
webui/src/bridge/web/: WebAudioEngine.ts  WebBridgeManager.ts  WebParamState.ts  juce-shim.ts  web-juce.ts
webui/src/components/: Controls.tsx  GainFader.tsx  GlobalDialog.tsx  LicenseDialog.tsx  Playlist.tsx  PlaylistItem.tsx  SourceSelector.tsx  Transport.tsx  VUMeter.tsx  WebDemoMenu.tsx  WebTransportBar.tsx
webui/src/hooks/: useFineAdjustPointer.ts  useHostShortcutForwarding.ts  useNumberInputAdjust.ts
webui/src/juce/: JuceBound.tsx  useJuceStore.ts
webui/src/store/: dialogStore.ts
webui/src/theme/: index.ts
webui/src/types/: index.ts
